crates/parsing/src/grammar/snapshots/parsing__grammar__tests__qualified-operator-name.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Add.(+)

Start { kind: OperatorNameType }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Token { kind: LeftParenthesis }
    Start { kind: NameRef }
      Token { kind: Operator }
    Finish
    Token { kind: RightParenthesis }
  Finish
Finish
