crates/parsing/src/grammar/snapshots/parsing__grammar__tests__qualified-operator-unfinished.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Add.(+

Start { kind: OperatorNameExpression }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: Wrapped }
      Token { kind: LeftParenthesis }
      Start { kind: NameRef }
        Token { kind: Operator }
      Finish
      Error { message: "expected RightParenthesis" }
    Finish
  Finish
Finish
