crates/parsing/src/grammar/snapshots/parsing__grammar__tests__record-access.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: foo.bar.baz

Start { kind: RecordAccessExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: RecordAccessPath }
    Token { kind: Period }
    Start { kind: Name }
      Token { kind: Label }
    Finish
    Token { kind: Period }
    Start { kind: Name }
      Token { kind: Label }
    Finish
  Finish
Finish
