crates/parsing/src/grammar/snapshots/parsing__grammar__tests__record-update-branch.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: a { b { c = 0 } }

Start { kind: RecordUpdateExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: RecordUpdateList }
    Token { kind: LeftCurly }
    Start { kind: RecordUpdateBranch }
      Start { kind: Name }
        Token { kind: Label }
      Finish
      Start { kind: RecordUpdateList }
        Token { kind: LeftCurly }
        Start { kind: RecordUpdateLeaf }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Token { kind: Equal }
          Start { kind: LiteralExpression }
            Token { kind: LiteralInteger }
          Finish
        Finish
        Token { kind: RightCurly }
      Finish
    Finish
    Token { kind: RightCurly }
  Finish
Finish
