crates/parsing/src/grammar/snapshots/parsing__grammar__tests__string-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: "hi!"
Start { kind: LiteralBinder }
  Token { kind: LiteralString }
Finish
