crates/parsing/src/grammar/snapshots/parsing__grammar__tests__tail-record.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: { | r }

Start { kind: RecordType }
  Token { kind: LeftCurly }
  Start { kind: RowInner }
    Start { kind: RowTail }
      Token { kind: Pipe }
      Start { kind: VariableType }
        Start { kind: NameRef }
          Token { kind: Lower }
        Finish
      Finish
    Finish
  Finish
  Token { kind: RightCurly }
Finish
