crates/parsing/src/grammar/snapshots/parsing__grammar__tests__trailing-comma.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: [ 1, ]

Start { kind: LiteralExpression }
  Start { kind: LiteralArray }
    Token { kind: LeftSquare }
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
    Token { kind: Comma }
    Error { message: "expected an expression" }
    Token { kind: RightSquare }
  Finish
Finish
