crates/parsing/src/grammar/snapshots/parsing__grammar__tests__true-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: true
Start { kind: LiteralBinder }
  Token { kind: LiteralTrue }
Finish
